--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,10 +24,8 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' |  prepend: site.url }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
 {% include google_search.js %}
-{% include google_analytics.js %}
+<!-- {% include google_analytics.js %} -->
 {% include ban.js %}
 
 
