--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,9 +24,6 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' |  prepend: site.url }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
 
-{% include google_search.js %}
-<!-- {% include google_analytics.js %} -->
-{% include ban.js %}
-
+<!-- {% include google_search.js %} -->
 
 </head>
