--- a/css/main.scss
+++ b/css/main.scss
@@ -6,21 +6,20 @@
 
 
 // Our variables
-$base-font-family: 'Lato', 'Open Sans', Helvetica, Arial, sans-serif !important;
+$base-font-family: Verdana, Arial, sans-serif !important;
 $base-font-size:   18px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.6em;
 
 $spacing-unit:     15px;
 
-$text-color:       #111;
-$background-color: #f9f9f9;
-$brand-color:      #2a7ae2;
-$brand-top-color:  #2583ad;
-$hover-color:      #DD1144;
-
+$text-color:       #fff;
+$background-color: #101823;
+$brand-color:      #da5444;
+$brand-top-color:  #fff;
+$link-color:       #da5444;
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color-light: lighten($grey-color, 30%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 $code-backgroud-color: #29281e;
@@ -57,7 +56,3 @@ $on-laptop:        800px;
         "layout",
         "_syntax-highlighting-native" // "syntax-highlighting"
 ;
-
-@import url('http://fonts.googleapis.com/css?family=Open+Sans');
-@import url('http://fonts.googleapis.com/css?family=Lato');
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
