Finesse redesign update

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -32,7 +32,8 @@ h1, h2, h3, h4,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: $spacing-unit;
+  margin-bottom: $spacing-unit;
 }
 
 
@@ -165,15 +166,9 @@ a {
 blockquote{
   padding: 0 1em;
   margin: 14px 0;
-  border: 2px dashed #d0dfda;
-  border-radius: 5px;
-  color: $grey-color;
-  font-size: 18px;
-  background: #f9f9f9;
-
-  &:hover {
-    color: #454545;
-  }
+  background: $background-color;
+  font-style: italic;
+  border-left: 2px solid $brand-color;
 
   > :last-child {
     margin-bottom: 0;
