--- a/css/main.scss
+++ b/css/main.scss
@@ -2,11 +2,10 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 // Our variables
-$base-font-family: Verdana, Arial, sans-serif !important;
+$base-font-family: 'Montserrat', sans-serif !important;
 $base-font-size:   18px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.6em;
