--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,8 @@
 <div class="col-sm-2">
-{% include Google_search.html%}
-{% include Copyright_Notice.html %}
+{% include About.html %}
 {% include Recent_Posts.html %}
 {% include Categories.html %}
 {% include Tags.html %}
-{% include Blogroll.html %}
 {% include Archives.html %}
 </div>
 
